--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,2 +1,6 @@
 @import "bootstrap";
-@import "config/sanitize"
+@import "config/sanitize";
+@import "modules/funclub";
+@import "modules/header-main";
+@import "modules/footer-main";
+
