--- a/app/assets/stylesheets/modules/_footer-main.scss
+++ b/app/assets/stylesheets/modules/_footer-main.scss
@@ -1,3 +1,8 @@
 .footer-main{
-  height: 100px;
+  height: 50px;
+  .copyright{
+    text-align: center;
+    line-height: 50px;
+    margin-bottom: 0;
+  }
 }
