create header logo

--- a/app/views/shared/_header-main.html.haml
+++ b/app/views/shared/_header-main.html.haml
@@ -1,4 +1,6 @@
 %header.header.header--main
   .header__inner
     .header__inner--left
+      = link_to root_path,  class: "logo" do
+        FUNCLUB
     .header__inner--right
