--- a/app/assets/stylesheets/modules/_header.scss
+++ b/app/assets/stylesheets/modules/_header.scss
@@ -12,10 +12,20 @@
   justify-content: space-between;
 
   &--left{
-    width: 200px;
+    width: 300px;
+    padding: 15px;
   }
 
   &--right{
-    width: 500px;
+    width: 200px;
   }
+}
+
+.logo{
+  font-size: 40px;
+  text-decoration: none;
+  display: block;
+  text-align: center;
+  color: black;
+  line-height: 50px;
 }
