--- a/app/assets/stylesheets/modules/_header.scss
+++ b/app/assets/stylesheets/modules/_header.scss
@@ -1,31 +1,34 @@
 .header{
-  height: 100px;
+  height: 200px;
 }
 
 .header--main{
-  padding: 10px 20px;
+  padding: 25px 50px;
 }
-
-.header__inner{
-  height: 100%;
+.header__upr{
+  height: 60%;
+  margin: 10px;
+  border-bottom: solid 2px #666;
   display: flex;
   justify-content: space-between;
 
-  &--left{
-    width: 300px;
-    padding: 15px;
-  }
-
-  &--right{
-    width: 200px;
+  &__logo{
+    font-size: 45px;
+    height: 50px;
+    margin-bottom: 8px;
   }
 }
 
-.logo{
-  font-size: 40px;
-  text-decoration: none;
-  display: block;
-  text-align: center;
-  color: black;
-  line-height: 50px;
+.header__lwr{
+  height: 40%;
+  width: 650px;
+  margin: 10px auto;
+  padding: 0 50px;
+
+}
+
+.header__lwr__menus{
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
 }
