--- a/app/views/shared/_header-main.html.haml
+++ b/app/views/shared/_header-main.html.haml
@@ -1,12 +1,20 @@
 %header.header.header--main
-  .header__upr
-    =link_to root_path, class:"header__upr__logo" do
+  .header__items
+    =link_to root_path, class:"logo header__child-items" do
       FUN CLUB
-    .header__upr__box
-      =link_to "#", class:"header__upr__box-new" do
-        新規登録
-      =link_to "#", class:"header__upr__box-login" do
-        ログイン
+    .header__child-items
+      - if user_signed_in?
+        .header__child-item
+          =link_to "#", class:"header__child-mypage" do
+            マイページ
+          =link_to "#", class:"header__child-logout" do
+            ログアウト
+      - else
+        .header__child-item
+          =link_to "#", class:"header__child-new" do
+            新規登録
+          =link_to "#", class:"header__child-login" do
+            ログイン
   .header__lwr
     %li.header__lwr__menus
       %ul.header__lwr__menu
