make new n login btn

--- a/app/assets/stylesheets/modules/_header.scss
+++ b/app/assets/stylesheets/modules/_header.scss
@@ -21,6 +21,10 @@
   line-height: 58px;
 }
 
+.header__child-new{
+  margin-right: 20px;
+}
+
 .header__lwr{
   height: 40%;
   width: 650px;
@@ -38,3 +42,5 @@
 .logo{
   font-size: 45px;
 }
+
+
