--- a/app/views/funclubs/index.html.haml
+++ b/app/views/funclubs/index.html.haml
@@ -1,4 +1,15 @@
 .funclub-wrapper
   = render "shared/header-main"
-  .funclub-main
+  %section.funclub--main
+    %h1.funclub__index
+      今週の試合
+    .funclub__child-contents
+      .funclub__child-content
+        .funclub__child-match
+        .funclub__child-match
+        .funclub__child-match
+        .funclub__child-match
+        .funclub__child-match
+        .funclub__child-match
+        .funclub__child-match
   =render "shared/footer-main"
