create match index

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,7 @@
 @import "bootstrap";
 @import "config/sanitize";
 @import "modules/funclub";
+@import "modules/match";
 @import "modules/header";
 @import "modules/footer";
 
