--- a/app/assets/stylesheets/modules/_funclub.scss
+++ b/app/assets/stylesheets/modules/_funclub.scss
@@ -8,8 +8,7 @@
   border-bottom: solid #666;
 }
 
-.funclub__child-content{
+.funclub__child-item{
   display: flex;
-}
-.funclub__child-match{
+  justify-content: space-between;
 }
