--- a/app/views/shared/_match-index.html.haml
+++ b/app/views/shared/_match-index.html.haml
@@ -1,10 +1,10 @@
 .match--index
   .match__componets
     .match__child-componet
-      %p.match__child-date
-        ○月×日
-      %p.match__child-time
-        18::00
-    .match__child-componet
       %p.match__child-opponent
-        VS Bチーム
+        チームB
+    .match__child-componet
+      %p.match__child-date
+        2020/01/01
+      %p.match__child-time
+        18:00
