--- a/app/assets/stylesheets/modules/_match.scss
+++ b/app/assets/stylesheets/modules/_match.scss
@@ -8,9 +8,12 @@
   font-size: 15px;
   margin: 0;
   text-align: center;
-  border-bottom: solid 1px;
 }
+
 .match__child-opponent{
   font-size: 25px;
   text-align: center;
+  border-bottom: solid 1px;
+  margin: 0;
+
 }
