--- a/app/views/shared/_match-index.html.haml
+++ b/app/views/shared/_match-index.html.haml
@@ -2,7 +2,7 @@
   .match__componets
     .match__child-componet
       %p.match__child-opponent
-        チームB
+        =icon('fab', 'fort-awesome')
     .match__child-componet
       %p.match__child-date
         2020/01/01
