pre-complete top page

--- a/app/assets/stylesheets/modules/_funclub.scss
+++ b/app/assets/stylesheets/modules/_funclub.scss
@@ -4,6 +4,10 @@
   margin: 0 auto;
 }
 
+.funclub--schedule{
+  margin-bottom: 30px;
+}
+
 .funclub__index{
   border-bottom: solid #666;
 }
@@ -15,4 +19,19 @@
 
 .funclub__child-match{
   width: 100px;
+}
+
+.funclub--contents{
+  display: flex;
+  justify-content: space-between;
+}
+
+.funclub--diary{
+  width: 200px;
+  height: 300px;
+}
+
+.funclub--infomation{
+  width: 300px;
+  height: 350px;
 }
