--- a/app/views/funclubs/index.html.haml
+++ b/app/views/funclubs/index.html.haml
@@ -1,16 +1,24 @@
 .funclub-wrapper
   = render "shared/header-main"
-  %section.funclub--main
-    %h1.funclub__index
-      最近の試合
-    .funclub__child-items
-      .funclub__child-item
-        =link_to "#", class:"funclub__child-match" do
-          =render "shared/match-index"
-        =link_to "#", class:"funclub__child-match" do
-          =render "shared/match-index"
-        =link_to "#", class:"funclub__child-match" do
-          =render "shared/match-index"
-        =link_to "#", class:"funclub__child-match" do
-          =render "shared/match-index"
+  .funclub--main
+    %section.funclub--schedule
+      %h1.funclub__index
+        最近の試合
+      .funclub__child-items
+        .funclub__child-item
+          =link_to "#", class:"funclub__child-match" do
+            =render "shared/match-index"
+          =link_to "#", class:"funclub__child-match" do
+            =render "shared/match-index"
+          =link_to "#", class:"funclub__child-match" do
+            =render "shared/match-index"
+          =link_to "#", class:"funclub__child-match" do
+            =render "shared/match-index"
+    %section.funclub--contents
+      %section.funclub--diary
+        %h1.funclub__index
+          選手日記
+      %section.funclub--infomation
+        %h1.funclub__index
+          お知らせ
   =render "shared/footer-main"
