re-name html class

--- a/app/assets/stylesheets/modules/_funclub.scss
+++ b/app/assets/stylesheets/modules/_funclub.scss
@@ -26,12 +26,12 @@
   justify-content: space-between;
 }
 
-.funclub--diary{
+.funclub__child-diary{
   width: 200px;
   height: 300px;
 }
 
-.funclub--infomation{
+.funclub__child-information{
   width: 300px;
   height: 350px;
 }
