--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,6 +6,7 @@
 @import "modules/match";
 @import "modules/header";
 @import "modules/footer";
+@import "modules/user-menu";
 
 a{
   text-decoration: none;
