--- a/app/assets/stylesheets/modules/_header.scss
+++ b/app/assets/stylesheets/modules/_header.scss
@@ -11,6 +11,14 @@
   padding: 0 50px;
   margin:  25px 0;
 }
+
+.header--user{
+  padding: 0 50px;
+  margin:  25px 0;
+  line-height: 150px;
+  text-align: center;
+}
+
 .header__items{
   height: 50%;
   margin: 10px;
