--- a/app/views/devise/registrations/menu.html.haml
+++ b/app/views/devise/registrations/menu.html.haml
@@ -1,14 +1,16 @@
 .user-wrapper
   = render 'devise/shared/header-user'
   .user__menus
-    %h1.user
+    %h1.user__menus--title
+      %p.user__title.text-center 新規登録
     .user__child-menus
-      .user__child-menu
-        =link_to root_path, class: "user__child-menu--mail" do
+      .user__child-menu.bg-dark
+        =link_to root_path, class: 'user__child-menu--mail text-white ' do
           メールアドレスで登録
-      .user__child-menu
-        =link_to "#", class:"user__child-menu--google" do
+      .user__child-menu.bg-danger
+        =link_to '#', class: 'user__child-menu--google text-white' do
           googleアカウントで登録
-      .user__child-menu
-        =link_to '#', class: 'user__child-menu--fasebook' do
+      .user__child-menu.bg-primary
+        =link_to '#', class: 'user__child-menu--fasebook text-white' do
           fasebookアカウントで登録
+  = render 'shared/footer-main'
