--- a/app/views/devise/registrations/menu.html.haml
+++ b/app/views/devise/registrations/menu.html.haml
@@ -5,7 +5,7 @@
       %p.user__title.text-center 新規登録
     .user__child-menus
       .user__child-menu.bg-dark
-        =link_to root_path, class: 'user__child-menu--mail text-white ' do
+        =link_to '#', class: 'user__child-menu--mail text-white ' do
           メールアドレスで登録
       .user__child-menu.bg-danger
         =link_to '#', class: 'user__child-menu--google text-white' do
