ユーザー登録のウィザード作成とSNS認証をgoogleのみに

--- a/app/views/devise/registrations/menu.html.haml
+++ b/app/views/devise/registrations/menu.html.haml
@@ -5,12 +5,9 @@
       %p.user__title.text-center 新規登録
     .user__child-menus
       .user__child-menu.bg-dark
-        =link_to '#', class: 'user__child-menu--mail text-white ' do
+        =link_to users_sign_up_step1_path, class: 'user__child-menu--mail text-white ' do
           メールアドレスで登録
       .user__child-menu.bg-danger
         =link_to '#', class: 'user__child-menu--google text-white' do
           googleアカウントで登録
-      .user__child-menu.bg-primary
-        =link_to '#', class: 'user__child-menu--fasebook text-white' do
-          fasebookアカウントで登録
   = render 'shared/footer-main'
