--- a/app/views/shared/_header-main.html.haml
+++ b/app/views/shared/_header-main.html.haml
@@ -12,7 +12,7 @@
               ログアウト
       - else
         .header__child-item
-          =link_to "#", class:"btn btn-outline-dark header__child-new", rorle:"button"do
+          =link_to users_menu_path, class:"btn btn-outline-dark header__child-new", rorle:"button"do
             新規登録
           =link_to "#", class:"btn btn-dark header__child-login", rorle:"button"do
             ログイン
