--- a/app/views/devise/registrations/menu.html.haml
+++ b/app/views/devise/registrations/menu.html.haml
@@ -4,8 +4,8 @@
     %h1.user__menus--title
       %p.user__title.text-center 新規登録
     .user__child-menus
-      =link_to users_sign_up_step1_path, class: 'btn btn-dark user__child-menu--mail' do
+      =link_to users_sign_up_step1_path, class: 'btn btn-dark btn-lg btn-block user__child-menu--mail' do
         メールアドレスで登録
-      =link_to '#', class: 'btn btn-danger user__child-menu--google' do
+      =link_to '#', class: 'btn btn-danger btn-lg btn-block user__child-menu--google' do
         googleアカウントで登録
   = render 'shared/footer-main'
