新規登録１ページ目の大枠設定

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,6 +7,7 @@
 @import "modules/header";
 @import "modules/footer";
 @import "modules/user-menu";
+@import "modules/user-new";
 
 a{
   text-decoration: none;
