カード登録画面完成

--- a/app/views/devise/shared/_form-newcredit.html.haml
+++ b/app/views/devise/shared/_form-newcredit.html.haml
@@ -1,14 +1,24 @@
 .form-cards
-  .form__child-cards.form-group.col-md-7
+  .form__child-cards.form-group.col-md-8
     %label.form__child-number
       カード番号
-    %input.form-control
-  .form__child-cards.form-group.col-md-7
+    %input.form-control.col-md-7
+    %small.text-muted
+      ハイフン(-)を除く数字のみを入力してください
+  .form__child-cards.form-group.col-md-8
     %label.form__child-expire
       有効期限
-    %input.form-control
-  .form__child-cards.form-group.col-md-7
+    .form-row
+      .col
+        %input.form-control{placeholder: "月/Month"}
+      %p.slash /
+      .col
+        %input.form-control{placeholder: "年/Year"}
+  .form__child-cards.form-group.col-md-10
     %label.form__child-cvc
       CVC
-    %input.form-control
-  
+    %input.form-control.col-md-4{type:"password"}
+    %small.text-muted
+      カード裏面の3桁もしくは4桁の数字を入力してください
+  %button.btn{type:"submit"}
+    次へ
