--- a/app/views/devise/shared/_form-newuser.html.haml
+++ b/app/views/devise/shared/_form-newuser.html.haml
@@ -1,4 +1,4 @@
-= form_with model: @user, url: users_sign_up_step2_path, scope: :session, method: :get, local: true do |f|
+= form_with model: @user, url: users_sign_up_step2_path, method: :get, local: true do |f|
   .form-items
     .form__child-items.form-group.col-md-7
       %label.form__child-name
