--- a/app/views/devise/registrations/final.html.haml
+++ b/app/views/devise/registrations/final.html.haml
@@ -1,7 +1,7 @@
 .NewUser-wrapper
   =render "devise/shared/header-user"
   .NewUser--main
-    %h1.NewUser__index
-      登録内容確認
-    =render "devise/shared/form-confirmation"
+    .NewUser__text
+      登録が完了しました。
+    = link_to root_path "トップページへ"
   =render "shared/footer-main"
