--- a/app/views/devise/shared/_form-confirmation.html.haml
+++ b/app/views/devise/shared/_form-confirmation.html.haml
@@ -7,7 +7,9 @@
 .test
   = "#{session[:user]["password"]}"
 
-
+.test
+  = form_with model:@user, url:users_sign_up_final_path, local: true do |f|
+    =f.submit "登録"
 
 
 
