データ登録のタイミング修正

--- a/app/views/devise/registrations/final.html.haml
+++ b/app/views/devise/registrations/final.html.haml
@@ -3,5 +3,6 @@
   .NewUser--main
     .NewUser__text
       登録が完了しました。
-    = link_to root_path "トップページへ"
+    = link_to root_path do
+      トップページへ
   =render "shared/footer-main"
