--- a/app/views/devise/shared/_form-confirmation.html.haml
+++ b/app/views/devise/shared/_form-confirmation.html.haml
@@ -1,15 +1,26 @@
-.test
-  = "#{session[:user]["name"]}"
-.test
-  = "#{session[:user]["name_kana"]}"
-.test
-  = "#{session[:user]["email"]}"
-.test
-  = "#{session[:user]["password"]}"
-
-.test
+.NewUser__confirmations
+  .NewUser__child-confirmations
+    %label.NewUser__child-confamation
+      氏名
+    .NewUser__child-name
+      = "#{session[:user]["name"]}"
+  .NewUser__child-confirmations
+    %label.NewUser__child-confamation
+      氏名(カナ)
+    .NewUser__child-kana
+      = "#{session[:user]["name_kana"]}"
+  .NewUser__child-confirmations
+    %label.NewUser__child-confamation
+      メールアドレス
+    .NewUser__child-email
+      = "#{session[:user]["email"]}"
+  .NewUser__child-confirmations
+    .NewUser__child-password
+      %p パスワードは個人情報のため表示しておりません。
+.NewUser__registration
   = form_with model:@user, url:users_sign_up_final_path, local: true do |f|
-    =f.submit "登録"
+    .NewUser__child-registration
+      =f.submit "登録"
 
 
 
