登録確認画面のCSSレイアウト

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,6 +8,8 @@
 @import "modules/footer";
 @import "modules/user-menu";
 @import "modules/user-new";
+@import "modules/user-confirmation";
+
 
 a{
   text-decoration: none;
