--- a/app/views/devise/shared/_form-confirmation.html.haml
+++ b/app/views/devise/shared/_form-confirmation.html.haml
@@ -16,7 +16,7 @@
       = "#{session[:user]["email"]}"
   .NewUser__child-confirmations
     .NewUser__child-password
-      %p パスワードは個人情報のため表示しておりません。
+      %p ※パスワードは個人情報のため表示しておりません。
 .NewUser__registration
   = form_with model:@user, url:users_sign_up_final_path, local: true do |f|
     .NewUser__child-registration
