マイページとログアウトのレイアウト作成

--- a/app/views/shared/_header-main.html.haml
+++ b/app/views/shared/_header-main.html.haml
@@ -6,9 +6,9 @@
       - if user_signed_in?
         .header__child-item
           %buton.btn
-            =link_to "#", class:"header__child-mypage" do
+            =link_to "#", class:"btn btn-dark header__child-mypage" do
               マイページ
-            =link_to destroy_user_session_path, method: :delete,  class:"header__child-logout" do
+            =link_to destroy_user_session_path, method: :delete,  class:"btn btn-danger header__child-logout" do
               ログアウト
       - else
         .header__child-item
