--- a/app/views/shared/_header-main.html.haml
+++ b/app/views/shared/_header-main.html.haml
@@ -14,7 +14,7 @@
         .header__child-item
           =link_to users_menu_path, class:"btn btn-outline-dark header__child-new", role:"button" do
             新規登録
-          =link_to "#", class:"btn btn-dark header__child-login", role: "button" do
+          =link_to new_user_session_path, class:"btn btn-dark header__child-login", role: "button" do
             ログイン
   .header__menus
     %ul.header__child-menus
