ログインページのクラス付け

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,6 +9,8 @@
 @import "modules/user-menu";
 @import "modules/user-new";
 @import "modules/user-confirmation";
+@import "modules/user-exist";
+
 
 
 a{
