--- a/app/views/devise/shared/_form-existuser.html.haml
+++ b/app/views/devise/shared/_form-existuser.html.haml
@@ -1,11 +1,12 @@
-= form_with model: @user,  url: new_user_session_path, local: true do |f|
-  .form__child-items.form-group.col-md-7
-    %label.form__child-mail
-      メールアドレス
-    = f.email_field :email, class: "form-control"
-  .form__child-items.form-group.col-md-6
-    %label.form__child-password
-      パスワード
-    = f.password_field :password, class: "form-control"
-  %button.btn
-    =f.submit "ログイン"
+.ExistUser__forms
+  = form_with model: @user,  url: new_user_session_path, local: true do |f|
+    .ExistUser__child-forms.form-group.col-md-7
+      %label.ExistUser__child-mail
+        メールアドレス
+      = f.email_field :email, class: "form-control"
+    .ExistUser__child-forms.form-group.col-md-6
+      %label.ExistUser__child-password
+        パスワード
+      = f.password_field :password, class: "form-control"
+    %button.btn
+      =f.submit "ログイン"
