--- a/app/views/devise/shared/_form-newuser.html.haml
+++ b/app/views/devise/shared/_form-newuser.html.haml
@@ -1,20 +1,19 @@
-.form-items
-  = form_with model: @user, url: users_sign_up_step2_path, method: :get, local: true do |f|
-    .form__child-items.form-group.col-md-7
-      %label.form__child-name
-        氏名
-      = f.text_field :name, class: "form-control"
-    .form__child-items.form-group.col-md-7
-      %label.form__child-kana
-        氏名(カナ)
-      = f.text_field :name_kana, class: "form-control"
-    .form__child-items.form-group.col-md-7
-      %label.form__child-mail
-        メールアドレス
-      = f.email_field :email, class: "form-control"
-    .form__child-items.form-group.col-md-6
-      %label.form__child-password
-        パスワード
-      = f.password_field :password, class: "form-control"
-    %button.btn
-      =f.submit "次へ"
+= form_with model: @user, url: users_sign_up_step2_path, method: :get, local: true, class: "NewUser__forms" do |f|
+  .NewUser__child-forms.form-group.col-md-7
+    %label.NewUser__child-form
+      氏名
+    = f.text_field :name, class: "form-control"
+  .NewUser__child-form.form-group.col-md-7
+    %label.NewUser__child-form
+      氏名(カナ)
+    = f.text_field :name_kana, class: "form-control"
+  .NewUser__child-form.form-group.col-md-7
+    %label.NewUser__child-form
+      メールアドレス
+    = f.email_field :email, class: "form-control"
+  .NewUser__child-form.form-group.col-md-6
+    %label.NewUser__child-form
+      パスワード
+    = f.password_field :password, class: "form-control"
+  %button.btn
+    =f.submit "次へ"
