ログインページのclass名再設定

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,7 +6,8 @@
 @import "modules/match";
 @import "modules/header";
 @import "modules/footer";
-@import "modules/user-menu";
+@import "modules/NewUser-menu";
+@import "modules/ExistUser-menu";
 @import "modules/user-new";
 @import "modules/user-confirmation";
 @import "modules/user-exist";
