--- a/app/assets/stylesheets/modules/_user-exist.scss
+++ b/app/assets/stylesheets/modules/_user-exist.scss
@@ -1,4 +1,4 @@
-.ExistUser--main{
+.ExistUser-main{
   padding-top: 200px;
   min-width: 300px;
   max-width: 500px;
@@ -6,7 +6,7 @@
 
 }
 
-.ExistUser__index{
+.ExistUser-main__index{
   border-bottom: solid 2px #666666;
   padding-bottom: 2px;
 }
