--- a/app/views/devise/registrations/menu.html.haml
+++ b/app/views/devise/registrations/menu.html.haml
@@ -1,7 +1,7 @@
 .NewUser-wrapper
   = render 'devise/shared/header-user'
   .NewUser-menus
-    %h1.NewUser-menus__title
+    %h1.title
       %p.NewUser-title 新規登録
     .NewUser__child-menus
       =link_to users_sign_up_step1_path, class: 'btn btn-dark btn-lg NewUser__child-mail' do
