--- a/app/views/devise/registrations/step1.html.haml
+++ b/app/views/devise/registrations/step1.html.haml
@@ -1,8 +1,8 @@
 .NewUser-wrapper
   =render "devise/shared/header-user"
   .NewUser--main
-    %h1.NewUser__index
-      新規登録
+    %h1.title
+      %p.NewUser-title 新規登録
     =render "devise/shared/form-newuser"
   =render "shared/footer-main"
 
