--- a/app/views/devise/registrations/step3.html.haml
+++ b/app/views/devise/registrations/step3.html.haml
@@ -1,7 +1,7 @@
 .NewUser-wrapper
   =render "devise/shared/header-user"
   .NewUser--main
-    %h1.NewUser__index
-      登録内容確認
+    %h1.title
+      %p.NewUser-title 登録内容確認
     =render "devise/shared/form-confirmation"
   =render "shared/footer-main"
