新規登録/ログインメニューのclass名の簡素化

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,8 +6,7 @@
 @import "modules/match";
 @import "modules/header";
 @import "modules/footer";
-@import "modules/NewUser-menu";
-@import "modules/ExistUser-menu";
+@import "modules/user-menu";
 @import "modules/user-new";
 @import "modules/user-confirmation";
 @import "modules/user-exist";
