--- a/app/assets/stylesheets/modules/_user-menu.scss
+++ b/app/assets/stylesheets/modules/_user-menu.scss
@@ -1,27 +1,27 @@
-.NewUser-menus{
+.user-menus{
   padding-top: 200px;
   min-width: 300px;
   max-width: 650px;
   margin: 0 auto;
 }
 
-.NewUser-title{
+.user-title{
   margin: 0;
 }
 
-.NewUser__child-menus{
+.user__child-menus{
   width: 400px;
   margin: 30px auto;
   text-align: center;
 }
 
-.NewUser__child-mail{
+.user__child-mail{
   font-size: 25px;
   width: 100%;
   display: block;
 }
 
-.NewUser__child-google{
+.user__child-google{
   font-size: 25px;
   margin-top: 15px;
   width: 100%;
