--- a/app/views/devise/registrations/step2.html.haml
+++ b/app/views/devise/registrations/step2.html.haml
@@ -1,7 +1,7 @@
 .NewUser-wrapper
   =render "devise/shared/header-user"
-  .NewUser--main
+  .user-new
     %h1.title
-      %p.NewUser-title クレジットカード登録
+      %p.user-title クレジットカード登録
     =render "devise/shared/form-newcredit"
   =render "shared/footer-main"
