--- a/app/assets/stylesheets/modules/_user-new.scss
+++ b/app/assets/stylesheets/modules/_user-new.scss
@@ -5,11 +5,11 @@
   margin: 0 auto;
 
 }
-
-.NewUser__index{
-  border-bottom: solid 2px #666666;
-  padding-bottom: 2px;
+.user-forms{
+  width: 400px;
+  margin: 30px auto;
 }
+
 
 .slash{
   line-height: 38px;
