入力内容確認ページのclass名再設定

--- a/app/assets/stylesheets/modules/_user-confirmation.scss
+++ b/app/assets/stylesheets/modules/_user-confirmation.scss
@@ -1,32 +1,14 @@
-.NewUser__confirmations{
-  padding: 0 20px;
+.user-inputs{
+  width: 370px;
+  margin: 30px auto;
 }
 
-.NewUser__child-confirmations{
+.user__child-inputs{
   margin-bottom: 15px;
 }
 
-.NewUser__child-name{
+.user__child-input{
   font-size: 20px;
   padding-left: 10px;
-}
-
-.NewUser__child-kana{
-  font-size: 20px;
-  padding-left: 10px;
-}
-
-.NewUser__child-email{
-  font-size: 20px;
-  padding-left: 10px;
-}
-
-.NewUser__child-password{
-  font-size: 15px;
-  padding-left: 10px;
-}
-
-.NewUser__child-text{
-  font-size: 15px;
 }
 
