--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,3 +27,12 @@ li{
   margin: 0 50px 0 ;
   padding: 5px;
 }
+
+.user-text{
+  font-size: 15px;
+  margin: 0;
+}
+
+.user__child-forms{
+  margin-bottom: 15px;
+}
