登録完了ページのclass再設定

--- a/app/views/devise/registrations/final.html.haml
+++ b/app/views/devise/registrations/final.html.haml
@@ -1,7 +1,7 @@
-.NewUser-wrapper
+.user-wrapper
   =render "devise/shared/header-user"
-  .NewUser--main
-    .NewUser__text
+  .user-new
+    .user-text
       登録が完了しました。
     = link_to root_path do
       トップページへ
