user登録用headerのレイアウト再設定

--- a/app/assets/stylesheets/modules/_header.scss
+++ b/app/assets/stylesheets/modules/_header.scss
@@ -11,9 +11,9 @@
 }
 
 .headerUser{
-  padding: 0 50px;
-  margin:  15px 0;
-  line-height: 150px;
+  height: 100px;
+  margin-bottom: 30px;
+  line-height: 100px;
   text-align: center;
 }
 
