--- a/app/views/devise/shared/_form-existuser.html.haml
+++ b/app/views/devise/shared/_form-existuser.html.haml
@@ -1,12 +1,11 @@
-.ExistUser__forms
-  = form_with model: @user,  url: new_user_session_path, local: true do |f|
-    .ExistUser__child-forms.form-group.col-md-7
-      %label.ExistUser__child-mail
-        メールアドレス
-      = f.email_field :email, class: "form-control"
-    .ExistUser__child-forms.form-group.col-md-7
-      %label.ExistUser__child-password
-        パスワード
-      = f.password_field :password, class: "form-control"
-    %button.btn
-      =f.submit "ログイン"
+= form_with model: @user,  url: new_user_session_path, local: true, class: 'user-forms' do |f|
+  .user__child-forms.form-group.col-md-7
+    %label
+      メールアドレス
+    = f.email_field :email, class: "form-control"
+  .user__child-forms.form-group.col-md-7
+    %label
+      パスワード
+    = f.password_field :password, class: "form-control"
+  %button.btn
+    =f.submit "ログイン"
