トップページのclass再設定とレイアウト変更

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,7 +2,7 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import "config/sanitize";
-@import "modules/funclub";
+@import "modules/funClub";
 @import "modules/match";
 @import "modules/header";
 @import "modules/footer";
