--- a/app/views/funclubs/index.html.haml
+++ b/app/views/funclubs/index.html.haml
@@ -1,26 +1,26 @@
-.funclub-wrapper
+.funClub-wrapper
   = render "shared/header-main"
-  .funclub--main
-    %section.funclub--schedule
-      %h1.funclub__index
+  .funClub
+    %section.funClub__schedules
+      %h1.title
         最近の試合
-      .funclub__child-items
-        .funclub__child-item
-          =link_to "#", class:"funclub__child-match" do
+      .funClub__child-schedules
+        .funClub__child-schedule
+          =link_to "#", class:"funClub__child-match" do
             =render "shared/match-index"
-          =link_to "#", class:"funclub__child-match" do
+          =link_to "#", class:"funClub__child-match" do
             =render "shared/match-index"
-          =link_to "#", class:"funclub__child-match" do
+          =link_to "#", class:"funClub__child-match" do
             =render "shared/match-index"
-          =link_to "#", class:"funclub__child-match" do
+          =link_to "#", class:"funClub__child-match" do
             =render "shared/match-index"
-    %section.funclub--contents
-      .funclub__child-content
-        .funclub__child-diary
-          %h1.funclub__index
+    %section.funClub__contents
+      .funClub__child-content
+        .funClub__child-diary
+          %h1.title
             選手日記
-      .funclub__child-content
-        .funclub__child-information
-          %h1.funclub__index
+      .funClub__child-content
+        .funClub__child-info
+          %h1.title
             お知らせ
   =render "shared/footer-main"
