--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,6 +10,8 @@
 @import "modules/user-new";
 @import "modules/user-confirmation";
 @import "modules/user-exist";
+@import "modules/schedules";
+
 
 
 a, a:hover {
