管理者権限の有無による表示変化

--- a/app/views/shared/_header-main.html.haml
+++ b/app/views/shared/_header-main.html.haml
@@ -23,7 +23,7 @@
         =link_to root_path, class:"headerMain__child-home" do
           トップページ
       %li.headerMain__child-menu
-        =link_to "#", class:"headerMain__child-schedule" do
+        =link_to schedules_path, class:"headerMain__child-schedule" do
           スケジュール
       %li.headerMain__child-menu
         =link_to "#", class:"headerMain__child-member" do
