--- a/app/assets/stylesheets/modules/_schedules.scss
+++ b/app/assets/stylesheets/modules/_schedules.scss
@@ -1,3 +1,3 @@
-// Place all the styles related to the schedules controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: https://sass-lang.com/
+.schedule{
+  padding-top: 125px;
+}
