チームデータ作成&管理者権限でスケジュール作成ページに行けるように

--- a/app/views/schedules/index.html.haml
+++ b/app/views/schedules/index.html.haml
@@ -1,8 +1,9 @@
 .schedule-wrapper
   =render "shared/header-main"
-  .schedule
+  .scheduleIndex
 
 
-- if can? :edit, current_user
+  - if can? :edit, current_user
+    =link_to new_schedule_path do
+      新規作成
 
-  admin権限です
