--- a/app/assets/stylesheets/modules/_schedules.scss
+++ b/app/assets/stylesheets/modules/_schedules.scss
@@ -1,3 +1,15 @@
-.schedule{
+.scheduleIndex{
   padding-top: 125px;
+}
+
+.scheduleNew{
+  padding-top: 155px;
+  min-width: 450px;
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.schedule-forms{
+  width: 400px;
+  margin: 30px auto;
 }
