--- a/app/views/schedules/_form-schedule.html.haml
+++ b/app/views/schedules/_form-schedule.html.haml
@@ -1,11 +1,5 @@
-= form_with model:@schedule, local: true, class:'schedule-forms' do |f|
-  .schedule_child-form.form-group
-    %label
-      試合日時
-    = f.datetime_field :match_date, class: "form-control"
-  .schedule_child-form.form-group
-    %label
-      対戦相手
-    = f.collection_select :opponent_id, @team, :id, :name, {prompt: '対戦相手を選んでください'}, {class:'form-control'}
-  %button.btn
-    = f.submit "作成"
+= form_with model: @schedule, url: schedules_path, class:'schedule-forms' do |f|
+  = f.fields_for :schedules do |i|
+    = i.datetime_field :match_date, class: "form-control"
+    = i.collection_select :opponent_id, @team, :id, :name, {prompt: '対戦相手を選んでください'}, {class:'form-control'}
+  = f.submit "作成"
