--- a/app/views/schedules/index.html.haml
+++ b/app/views/schedules/index.html.haml
@@ -4,4 +4,17 @@
     - if can? :edit, current_user
       =link_to new_schedule_path do
         新規作成
+    %h1.title
+      =l Time.current, format: :month
+    .scheduleIndex-month
+      - @schedules.each do |schedule|
+        .matchBox
+          .matchBox__child-date
+            = l schedule.match_date, format: :day
+          .matchBox__child-time
+            %label 開始時間
+            = l schedule.match_date, format: :time
+          .matchBox__child-opponent
+            %label VS
+            = schedule.team.name
 
