--- a/app/assets/stylesheets/modules/_schedules.scss
+++ b/app/assets/stylesheets/modules/_schedules.scss
@@ -3,10 +3,26 @@
   min-width: 450px;
   max-width: 800px;
   margin: 0 auto;
+  background-color: #ffffff;
 }
 
 .scheduleIndex-month{
-  margin: 10px 50px 10px;
+  margin: 10px 75px 10px;
+
+}
+
+.matchBox{
+  height: 100px;
+  margin-bottom: 10px;
+  border: solid 3px #eeeeee;
+  border-radius: 10px;
+  padding: 7px;
+  background-color: #eeeeee;
+}
+
+.matchBox__child-date{
+  font-size: 28px;
+  color: #fff;
 }
 
 .scheduleNew{
