スケジュール一覧view作成

--- a/app/views/schedules/index.html.haml
+++ b/app/views/schedules/index.html.haml
@@ -8,13 +8,14 @@
         .scheduleIndex-add
           =link_to new_schedule_path do
             スケジュールを追加する
-      - @schedules.each do |schedule|
-        .card
-          .card-body
-            %h5.card-title
-              = l schedule.match_date, format: :day
-            %h6.card-subtitle.mb-2.text-muted
-              =l schedule.match_date, format: :time
-            .cart-text
-              = schedule.team.name
+        .card-deck
+          - @schedules.each do |schedule|
+            .card
+              .card-body
+                %h5.card-title
+                  = l schedule.match_date, format: :day
+                %h6.card-subtitle.mb-2.text-muted
+                  =l schedule.match_date, format: :time
+                .cart-text
+                  = schedule.team.name
 
