--- a/app/assets/stylesheets/modules/_schedules.scss
+++ b/app/assets/stylesheets/modules/_schedules.scss
@@ -15,18 +15,22 @@
   text-align: right;
 }
 
+.card-deck{
+  padding: 20px;
+  .card{
+    width: 100px;
+    flex: none;
+    margin:0 10px 15px 10px;
+  }
+}
+
+
 .scheduleNew{
   padding-top: 155px;
   min-width: 450px;
   max-width: 800px;
   margin: 0 auto;
 }
-.card{
-  width: 50%;
-  margin: 10px;
-}
-
-
 
 .schedule-forms{
   width: 650px;
